apps/grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:13.0.1-security-01
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 384Mi
            limits:
              memory: 768Mi
          volumeMounts:
            - name: config-volume
              mountPath: /var/lib/grafana
              subPath: grafana
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: data-pvc
